[gd_scene load_steps=15 format=3 uid="uid://dg60odwhtjrho"]

[ext_resource type="PackedScene" uid="uid://c1hq7x2xqu7i6" path="res://Scenes/Components/health_component.tscn" id="1_a643g"]
[ext_resource type="Script" path="res://Scenes/player.gd" id="1_ahpx1"]
[ext_resource type="Script" path="res://Scenes/UI/ammo_ui.gd" id="2_iook3"]
[ext_resource type="PackedScene" uid="uid://bc1eenrd8jhyj" path="res://Scenes/gun.tscn" id="3_a1yc5"]
[ext_resource type="Script" path="res://Scenes/UI/health_ui.gd" id="3_w4v3h"]
[ext_resource type="Script" path="res://Scenes/UI/score_ui.gd" id="4_6jcvl"]
[ext_resource type="Shader" path="res://Shaders/score.gdshader" id="4_ji4ih"]
[ext_resource type="PackedScene" uid="uid://noma0in8bafj" path="res://Scenes/Components/barrier_component.tscn" id="5_vrr04"]
[ext_resource type="Script" path="res://Scenes/UI/final_screen.gd" id="9_qq8h2"]
[ext_resource type="PackedScene" uid="uid://clfie208ecil1" path="res://Scenes/UI/level_button.tscn" id="10_nmx5x"]

[sub_resource type="InputEventKey" id="InputEventKey_unifh"]
device = -1
keycode = 69
unicode = 101

[sub_resource type="Shortcut" id="Shortcut_4xb1q"]
events = [SubResource("InputEventKey_unifh")]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_blijq"]
shader = ExtResource("4_ji4ih")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0ph02"]

[node name="Player" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ahpx1")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="BarrierComponent" parent="." instance=ExtResource("5_vrr04")]
position = Vector2(0, 320)

[node name="Footer" type="HFlowContainer" parent="."]
light_mask = 0
layout_mode = 0
offset_left = -576.0
offset_top = 224.0
offset_right = 576.0
offset_bottom = 324.0
alignment = 1

[node name="HealthUI" type="Button" parent="Footer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 67
shortcut = SubResource("Shortcut_4xb1q")
text = "E"
script = ExtResource("3_w4v3h")

[node name="ScoreUI" type="RichTextLabel" parent="Footer"]
light_mask = 0
material = SubResource("ShaderMaterial_blijq")
clip_contents = false
custom_minimum_size = Vector2(720, 100)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 67
bbcode_enabled = true
text = "[center]0"
script = ExtResource("4_6jcvl")

[node name="ColorRect" type="ColorRect" parent="Footer/ScoreUI"]
use_parent_material = true
custom_minimum_size = Vector2(720, 100)
layout_mode = 2
offset_right = 720.0
offset_bottom = 100.0
color = Color(0, 0, 0, 0.34902)

[node name="ScoreTimer" type="Timer" parent="Footer/ScoreUI"]
one_shot = true

[node name="AmmoUI" type="Button" parent="Footer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 67
text = "R"
script = ExtResource("2_iook3")

[node name="HealthComponent" parent="." instance=ExtResource("1_a643g")]
MAX_HEALTH = 3

[node name="Gun" parent="." instance=ExtResource("3_a1yc5")]

[node name="InvincibilityTimer" type="Timer" parent="."]

[node name="FinalScreen" type="Control" parent="."]
visible = false
layout_mode = 2
anchors_preset = 0
offset_left = -576.0
offset_right = 576.0
offset_bottom = 216.0
mouse_filter = 2
script = ExtResource("9_qq8h2")

[node name="RankLabel" type="RichTextLabel" parent="FinalScreen"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_left = 128.0
offset_top = 72.0
offset_right = 328.0
offset_bottom = 164.0
theme_override_font_sizes/normal_font_size = 67
bbcode_enabled = true
text = "Rank:"
fit_content = true

[node name="LevelButton" parent="FinalScreen" instance=ExtResource("10_nmx5x")]
layout_mode = 0
offset_left = 760.0
offset_top = 72.0
offset_right = 1108.0
offset_bottom = 172.0

[node name="Rank" type="RichTextLabel" parent="FinalScreen"]
material = SubResource("ShaderMaterial_0ph02")
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
offset_left = 328.0
offset_top = 24.0
offset_right = 432.0
offset_bottom = 208.0
theme_override_font_sizes/normal_font_size = 134
bbcode_enabled = true
text = "S"
fit_content = true

[connection signal="duck" from="." to="BarrierComponent" method="_duck"]
[connection signal="duck" from="." to="Gun" method="_on_duck"]
[connection signal="unduck" from="." to="BarrierComponent" method="_unduck"]
[connection signal="unduck" from="." to="Gun" method="_on_unduck"]
[connection signal="turn_on_final_screen" from="Footer/ScoreUI" to="FinalScreen" method="_on_score_ui_turn_on_final_screen"]
[connection signal="timeout" from="Footer/ScoreUI/ScoreTimer" to="Footer/ScoreUI" method="_on_score_timer_timeout"]
[connection signal="damaged" from="HealthComponent" to="Footer/HealthUI" method="_on_health_component_damaged"]
[connection signal="damaged" from="HealthComponent" to="Footer/ScoreUI" method="_on_health_component_damaged"]
[connection signal="dead" from="HealthComponent" to="." method="die"]
[connection signal="shoot" from="Gun" to="Footer/ScoreUI" method="_on_gun_shoot"]
[connection signal="update_ammo" from="Gun" to="Footer/AmmoUI" method="_on_gun_update_ammo"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
